# modern-python-engineering

./: .gitignore  README.md  main.py  pyproject.toml
source/: conf.py  index.rst  intro.rst
source/environment/: conda_mamba.rst  hatch.rst  index.rst  pip.rst  poetry.rst  uv.rst  venv.rst
