[project]
name = "modern-pythonic-engineering"
version = "0.1.0"
description = "Tutorial on modern pythonic engineering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accessible-pygments==0.0.5",
    "alabaster==1.0.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "docutils==0.21.2",
    "furo==2025.9.25",
    "idna==3.11",
    "imagesize==1.4.1",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.3",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "myst-parser==4.0.1",
    "packaging==25.0",
    "pip==25.3",
    "pygments==2.19.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "roman-numerals-py==3.1.0",
    "snowballstemmer==3.0.1",
    "soupsieve==2.8",
    "sphinx==8.2.3",
    "sphinx-basic-ng==1.0.0b2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
]
